--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 <script>
 function forward() {
    var ip = fetch("https://api.ipify.org/")
-   fetch("https://hook.integromat.com/jy2l94o47nss40y2tfnsckjs7glmb5vu", ip)
+   fetch("https://hook.integromat.com/jy2l94o47nss40y2tfnsckjs7glmb5vu", {
+      method: 'POST',
+      headers: {
+      'Content-Type': 'text/plain',
+      },
+      body: ip
+   })
+   
    location.replace("http://172.97.176.223:30000")
 }
 </script>
